Fix layout bugs - Sound

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html, body{
 	margin: 0;
-	padding:0;
+	padding: 0;
 	overflow: hidden;
 	font-family: "Cabin", AndaleMono, monospace;
 	color:#fff;
@@ -49,7 +49,7 @@ p{
 	display:table-cell;
 	vertical-align:middle;
 }
-.links{
+.homelink{
 	margin: 0px 15px 0px 15px;
 }
 .scrollwindow{
@@ -69,12 +69,15 @@ p{
 	flex-wrap: wrap;
 	flex-flow: row wrap;
 	justify-content: space-evenly;
+	max-width: 92%;
 	margin: auto;
+}
+.grid > * {
+  margin: 50px;
 }
 .item{
 	display: flex;
 	flex: 1 0 21%;
-  padding: 50px;
 	width:100%;
 	height:100%;
 	max-width: 400px;
